--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
-
+{% load static %}
 
 {% block content %}
 <div class="container">
 <form class="form-signin" method="post">{% csrf_token %}
-  <img class="mb-4" src="../assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
+  <img class="mb-4" src="{% static 'liverpool.jpg' %}" alt="" width="72" height="57">
     <h1 class="h3 mb-3 fw-normal">Please sign up</h1>
     
     {% if error %}
@@ -16,7 +16,8 @@
     <label for="inputPassword" class="visually-hidden">Password</label>
     <input type="password" id="inputPassword" class="form-control" placeholder="Password" name="password_data" required>
     <!-- <div class="checkbox mb-3"></div> -->
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+    <a class="btn btn-lg btn-primary btn-block" href="{% url 'list_1' %}">Sign in</a>
+    <!-- <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button> -->
     <p class="mt-5 mb-3 text-muted">&copy; 2017-2020</p>
 </form>
 </div>
